--- a/Blog-1 copy.html
+++ b/Blog-1 copy.html
@@ -121,7 +121,8 @@
             margin-top: 10px;
           "
         >
-          📣 The Future of iPhone Shopping is Here: Embrace the Magic of TVELP
+          📣 The Future of iPhone Shopping is Here: Embrace the Magic of
+          <a style="color: #2f96fa" href="https://www.tvelp.com/">Tvelp</a>
           Now! 🔮
         </p>
         <p
