--- a/Blog-1.html
+++ b/Blog-1.html
@@ -145,9 +145,9 @@
           guarantees that buyers' unique needs are met. Additionally, customers
           can track the development in their requested products and live updated
           for the duration of the complete process. Embrace the power of network
-          and trust with Tvelp, and unencumber a world of interesting shopping
-          opportunities. Stay tuned for the epic launch, where exhilaration
-          knows no bounds!✈️🤝🎁
+          and trust with <a href="https://www.tvelp.com/">Tvelp</a>, and
+          unencumber a world of interesting shopping opportunities. Stay tuned
+          for the epic launch, where exhilaration knows no bounds!✈️🤝🎁
         </p>
       </div>
     </section>
