--- a/Blog-2.html
+++ b/Blog-2.html
@@ -143,8 +143,12 @@
             margin-top: 10px;
           "
         >
-          Join the worldwide purchasing revolution nowadays! Visit www.Tvelp.Com
-          to discover the endless possibilities and be a part of the Tvelp
+          Join the worldwide purchasing revolution nowadays! Visit
+          <a style="color: #2f96fa" href="https://www.tvelp.com/"
+            >www.Tvelp.com</a
+          >
+          to discover the endless possibilities and be a part of the
+          <a style="color: #2f96fa" href="https://www.tvelp.com/">Tvelp</a>
           network. Together, let's redefine the manner we store and join
           throughout borders. 🌟
         </p>
