--- a/Mackbook.html
+++ b/Mackbook.html
@@ -163,7 +163,7 @@
           "
         >
           📣 The Future of MacBook Pro Shopping is Here: Embrace the Magic of
-          TVELP Now! 🔮
+             <a style="color: #2f96fa" href="https://www.tvelp.com/">Tvelp</a> Now! 🔮
         </p>
 
         <p>
