--- a/Shopper.html
+++ b/Shopper.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Art of Packing for International Adventures</title>
+    <title>
+      Shopping Smarter: 10 Things Cheaper inside the USA than India!
+    </title>
   </head>
   <body style="margin: 0; padding: 0">
     <section>
@@ -322,12 +324,13 @@
         >
           Finding affordable and thoughtful presents on your family would not
           ought to be a frightening venture. With america's appealing expenses
-          and a platform like TVELP that connects customers with savvy
-          vacationers, you can effortlessly source these gift gadgets with out
-          breaking the bank. It's a win-win scenario that opens up a world of
-          budget-friendly opportunities. So, start your gifting adventure and
-          make your circle of relatives's day with those great reveals from the
-          USA! 🎁🌎
+          and a platform like
+          <a style="color: #2f96fa" href="https://www.tvelp.com/">Tvelp</a> that
+          connects customers with savvy vacationers, you can effortlessly source
+          these gift gadgets with out breaking the bank. It's a win-win scenario
+          that opens up a world of budget-friendly opportunities. So, start your
+          gifting adventure and make your circle of relatives's day with those
+          great reveals from the USA! 🎁🌎
         </p>
       </div>
     </section>
