--- a/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.html
+++ b/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+      Bridging the Gap: Revolutionizing International Shopping for Indian
+      Shoppers
+    </title>
   </head>
 
   <body style="margin: 0; padding: 0">
     <section>
       <img
         src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.png"
-        alt="bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.png"
+        alt="bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
       <div style="padding: 20px">
