--- a/earning-while-traveling-your-passport-to-income-on-the-go.html
+++ b/earning-while-traveling-your-passport-to-income-on-the-go.html
@@ -11,7 +11,7 @@
     <section>
       <img
         src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/traveler/earning-while-traveling-your-passport-to-income-on-the-go.png"
-        alt="earning-while-traveling-your-passport-to-income-on-the-go.png"
+        alt="earning-while-traveling-your-passport-to-income-on-the-go"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
       <div style="padding: 20px">
