--- a/introducing-tvelp-the-global-shopping-revolution.html
+++ b/introducing-tvelp-the-global-shopping-revolution.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Introducing Tvelp: The Global Shopping Revolution!</title>
   </head>
 
   <body style="margin: 0; padding: 0">
     <section>
       <img
         src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/introducing-tvelp-the-global-shopping-revolution.png"
-        alt="bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.png"
+        alt="introducing-tvelp-the-global-shopping-revolution"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
       <div style="padding: 20px">
