--- a/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.html
+++ b/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+      The Dilemma of Budget Travel: Exploring Opportunities to Earn While Flying
+    </title>
   </head>
   <body style="margin: 0; padding: 0">
     <section>
       <img
         src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.png"
-        alt="unleash-your-productivity-with-tvelp-the-ultimate-macbook-pro-shopping-extravaganza"
+        alt="the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
       <div style="padding: 20px">
