--- a/shopping-smarter-10-things-cheaper-inside-the-usa-than-india.html
+++ b/shopping-smarter-10-things-cheaper-inside-the-usa-than-india.html
@@ -11,7 +11,7 @@
     <section>
       <img
         src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/shopping-smarter-10-things-cheaper-inside-the-usa-than-india.png"
-        alt="shopping-smarter-10-things-cheaper-inside-the-usa-than-india.png"
+        alt="shopping-smarter-10-things-cheaper-inside-the-usa-than-india"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
       <div style="padding: 20px">
