--- a/unbelievable-savings-await-you-with-tvelp-the-ultimate-iphone-shopping-extravaganza.html
+++ b/unbelievable-savings-await-you-with-tvelp-the-ultimate-iphone-shopping-extravaganza.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+      Unbelievable Savings Await You with TVELP: The Ultimate iPhone Shopping
+      Extravaganza!
+    </title>
   </head>
 
   <body style="margin: 0; padding: 0">
     <section>
       <img
         src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/unbelievable-savings-await-you-with-tvelp-the-ultimate-iphone-shopping-extravaganza.png"
-        alt="bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.png"
+        alt="unbelievable-savings-await-you-with-tvelp-the-ultimate-iphone-shopping-extravaganza"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
       <div style="padding: 20px">
