added all blogs

--- a/discover-the-art-of-savvy-shopping.html
+++ b/discover-the-art-of-savvy-shopping.html
@@ -12,7 +12,7 @@
   <body style="margin: 0; padding: 0">
     <section>
       <img
-        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/discover-the-art-of-savvy-shopping-with-tvelp-elevating-luxury-to-affordable-heights.png"
+        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/discover-the-art-of-savvy-shopping-with-tvelp-elevating-luxury-to-affordable-heights-min.webp"
         alt="discover-the-art-of-savvy-shopping-with-tvelp-elevating-luxury-to-affordable-heights"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
@@ -43,7 +43,6 @@
           intact. Get ready for a shopping journey that redefines affordability
           and luxury! 🌌
         </p>
-
         <h4
           style="
             font-size: 20px;
@@ -71,7 +70,6 @@
           the very same bag is available for $100 (approximately ₹8,311),
           marking a monumental difference! 🎒💄
         </p>
-
         <h4
           style="
             font-size: 20px;
@@ -151,7 +149,6 @@
           where opulence meets smart spending, and where global connections make
           luxury accessible to all. 🌟🛍️
         </p>
-
         <p
           style="
             font-size: 10px;
