--- a/earning-while-traveling-your-passport-to-income-on-the-go.html
+++ b/earning-while-traveling-your-passport-to-income-on-the-go.html
@@ -10,7 +10,7 @@
   <body style="margin: 0; padding: 0">
     <section>
       <img
-        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/traveler/earning-while-traveling-your-passport-to-income-on-the-go.png"
+        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/traveler/earning-while-traveling-your-passport-to-income-on-the-go-min.webp"
         alt="earning-while-traveling-your-passport-to-income-on-the-go"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
@@ -159,7 +159,6 @@
           becoming a tour guide. Share your local knowledge and earn tips from
           tourists.
         </p>
-
         <h4
           style="
             font-size: 20px;
