--- a/introducing-tvelp-the-global-shopping-revolution.html
+++ b/introducing-tvelp-the-global-shopping-revolution.html
@@ -9,8 +9,8 @@
   <body style="margin: 0; padding: 0">
     <section>
       <img
-        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/introducing-tvelp-the-global-shopping-revolution.png"
-        alt="introducing-tvelp-the-global-shopping-revolution"
+        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/introducing-tvelp-the-global-shopping-revolution-min.webp"
+        alt="introducing-tvelp-the-global-shopping-revolution-min"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
       <div style="padding: 20px">
