--- a/shopping-smarter-10-things-cheaper-inside-the-usa-than-india.html
+++ b/shopping-smarter-10-things-cheaper-inside-the-usa-than-india.html
@@ -10,7 +10,7 @@
   <body style="margin: 0; padding: 0">
     <section>
       <img
-        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/shopping-smarter-10-things-cheaper-inside-the-usa-than-india.png"
+        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/shopping-smarter-10-things-cheaper-inside-the-usa-than-india-min.webp"
         alt="shopping-smarter-10-things-cheaper-inside-the-usa-than-india"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
@@ -46,7 +46,6 @@
           how you may deliver them for your family with the assist of systems
           like TVELP.
         </p>
-
         <h4
           style="
             font-size: 20px;
@@ -69,7 +68,6 @@
           Here are 10 gadgets that you may take into account gifting on your
           circle of relatives with out burning a hollow for your pocket:
         </p>
-
         <h4
           style="
             font-size: 20px;
@@ -116,7 +114,6 @@
           frequently available at a fragment of the fee compared to India. Think
           of renowned names within the fashion industry.
         </p>
-
         <h4
           style="
             font-size: 20px;
@@ -289,7 +286,6 @@
         >
           10. Specialty Food Items and Beverages: 🍔🍹
         </h4>
-
         <p
           style="
             font-size: 16px;
@@ -302,7 +298,6 @@
           gourmet coffee, spices, or area of expertise snacks. These items make
           for delightful surprises.
         </p>
-
         <h4
           style="
             font-size: 20px;
