--- a/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.html
+++ b/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.html
@@ -10,7 +10,7 @@
   <body style="margin: 0; padding: 0">
     <section>
       <img
-        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.png"
+        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying-min.webp"
         alt="the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
@@ -43,7 +43,6 @@
           maximum of our empty baggage space or explore opportunities to earn
           some extra cash at the same time as at the go.
         </p>
-
         <h4
           style="
             font-size: 20px;
@@ -127,7 +126,6 @@
           consumers conquer the challenges of highly-priced delivery
           alternatives. 📦💸
         </p>
-
         <p
           style="
             font-size: 16px;
