--- a/unbelievable-savings-await-you-with-tvelp-the-ultimate-iphone-shopping-extravaganza.html
+++ b/unbelievable-savings-await-you-with-tvelp-the-ultimate-iphone-shopping-extravaganza.html
@@ -12,7 +12,7 @@
   <body style="margin: 0; padding: 0">
     <section>
       <img
-        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/unbelievable-savings-await-you-with-tvelp-the-ultimate-iphone-shopping-extravaganza.png"
+        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/unbelievable-savings-await-you-with-tvelp-the-ultimate-iphone-shopping-extravaganza-min.webp"
         alt="unbelievable-savings-await-you-with-tvelp-the-ultimate-iphone-shopping-extravaganza"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
@@ -42,7 +42,6 @@
           make your dream come true without draining your wallet! Prepare for a
           shopping revolution like never before! 🌌
         </p>
-
         <h4
           style="
             font-size: 20px;
@@ -54,7 +53,6 @@
         >
           🌐 India vs. Tvelp:
         </h4>
-
         <p style="font-size: 16px; color: #666; line-height: 1.5">
           A Price Comparison Beyond Imagination In India, the iPhone 14 Pro Max
           128 GB comes with a jaw-dropping price tag of ₹1,59,900 leaving you
@@ -99,7 +97,6 @@
           astonishing ₹115036*! Your jaw drops, and your eyes sparkle as you
           realize that you directly save a whopping ₹44,864! 💫✨
         </p>
-
         <p
           style="
             font-size: 16px;
@@ -125,8 +122,8 @@
           "
         >
           📣 The Future of iPhone Shopping is Here: Embrace the Magic of
-          <a style="color: #2f96fa" href="https://www.tvelp.com/">Tvelp</a>
-          Now! 🔮
+          <a style="color: #2f96fa" href="https://www.tvelp.com/">Tvelp</a> Now!
+          🔮
         </p>
         <p
           style="
