--- a/unleash-your-productivity-with-tvelp-the-ultimate-macbook-pro-shopping-extravaganza.html
+++ b/unleash-your-productivity-with-tvelp-the-ultimate-macbook-pro-shopping-extravaganza.html
@@ -10,7 +10,7 @@
   <body style="margin: 0; padding: 0">
     <section>
       <img
-        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/unleash-your-productivity-with-tvelp-the-ultimate-macbook-pro-shopping-extravaganza.png"
+        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/unleash-your-productivity-with-tvelp-the-ultimate-macbook-pro-shopping-extravaganza-min.webp"
         alt="unleash-your-productivity-with-tvelp-the-ultimate-macbook-pro-shopping-extravaganza"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
