--- a/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.html
+++ b/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.html
@@ -12,7 +12,7 @@
   <body style="margin: 0; padding: 0">
     <section>
       <img
-        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.png"
+        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/shopper/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers-min.webp"
         alt="bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
