--- a/the-art-of-packing-for-international-adventures.html
+++ b/the-art-of-packing-for-international-adventures.html
@@ -8,7 +8,7 @@
   <body style="margin: 0; padding: 0">
     <section>
       <img
-        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/traveler/the-art-of-packing-for-international-adventures.png"
+        src="https://storage.googleapis.com/dev-tvelp-static/blogs/blog-images/traveler/the-art-of-packing-for-international-adventures-min.webp"
         alt="the-art-of-packing-for-international-adventures"
         style="border-radius: 10px 10px 0 0; width: 100%"
       />
@@ -42,7 +42,6 @@
           international journeys, making sure you're nicely-organized,
           stress-unfastened, and equipped to make the maximum of a while abroad.
         </p>
-
         <h4
           style="
             font-size: 20px;
@@ -132,7 +131,6 @@
             packing snacks in your journey.
           </li>
         </ol>
-
         <p
           style="
             font-size: 16px;
