added keywords in this blog

--- a/general/make-international-shipping-costs-a-thing-of-the-past.html
+++ b/general/make-international-shipping-costs-a-thing-of-the-past.html
@@ -25,6 +25,7 @@
         >
           🚀 Make International Shipping Costs A Thing Of The Past 🌎
         </h1>
+        <span style="display: none">International Shipping Costs</span>
         <p
           style="
             font-size: 16px;
@@ -51,6 +52,7 @@
         >
           💡 Revamping International Shopping
         </h4>
+        <span style="display: none">International Shopping</span>
         <p
           style="
             font-size: 16px;
@@ -65,6 +67,7 @@
           pay such amounts. We do not want you to miss out on the pleasure of
           owning products from brands that enjoy worldwide recognition.
         </p>
+        <span style="display: none">cross-border shipping fees</span>
         <p
           style="
             font-size: 16px;
@@ -80,6 +83,7 @@
           from abroad is only for the elite section of society but an achievable
           objective for anyone at any stage.
         </p>
+        <span style="display: none">buying things from abroad</span>
         <p
           style="
             font-size: 16px;
@@ -102,6 +106,7 @@
         >
           🌐 P2P Communities, Redefined
         </h4>
+        <span style="display: none">P2P Communities</span>
         <p
           style="
             font-size: 16px;
@@ -139,6 +144,9 @@
           days to deliver products. You can grab delivery from Tvelp by waiting
           for a minimum of seven days.
         </p>
+        <span style="display: none">deliver products</span>
+        <span style="display: none">grab delivery</span>
+
         <p
           style="
             font-size: 16px;
@@ -164,6 +172,7 @@
           search bar on the Shopper page. Once you put the URL, relax and let
           Tvelp take care of the rest.🌐
         </p>
+        <span style="display: none"> go overseas</span>
         <h4
           style="
             font-size: 20px;
@@ -175,6 +184,8 @@
         >
           🌍 And, The Travelers ✈️
         </h4>
+        <span style="display: none">international shopping websites</span>
+
         <p
           style="
             font-size: 16px;
@@ -190,6 +201,7 @@
           rewards’. It is something we believe they deserve because it is up to
           them to agree to go overseas and deliver the product.
         </p>
+        <span style="display: none">earn money with every trip</span>
 
         <p
           style="
@@ -204,6 +216,8 @@
           shoppers and travelers can be a great networking opportunity as well
           as usher in a new age of P2P communities. 🌐🤝
         </p>
+
+        <span style="display: none"> P2P communities.</span>
         <h4
           style="
             font-size: 20px;
