added style to link tag

--- a/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.html
+++ b/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.html
@@ -148,7 +148,7 @@
           guarantees that buyers' unique needs are met. Additionally, customers
           can track the development in their requested products and live updated
           for the duration of the complete process. Embrace the power of network
-          and trust with <a href="https://www.tvelp.com/">Tvelp</a>, and
+          and trust with <a href="https://www.tvelp.com/" target="_blank" color: #2f96fa">Tvelp</a>, and
           unencumber a world of interesting shopping opportunities. Stay tuned
           for the epic launch, where exhilaration knows no bounds!✈️🤝🎁
         </p>
