--- a/earning-while-traveling-your-passport-to-income-on-the-go.html
+++ b/earning-while-traveling-your-passport-to-income-on-the-go.html
@@ -223,11 +223,11 @@
           Earning while traveling isn't a far-fetched dream; it's a reality
           that's waiting to be explored. By embracing the opportunities the
           world has to offer, whether through freelancing, content creation, or
-          leveraging platforms like <a href="https://www.tvelp.com/">TVELP</a>,
-          you can transform your journeys into income-generating experiences.
-          So, pack your bags, set your sights on the next destination, and
-          remember: the world is not just your playground; it's your paycheck
-          too. 🌏💰✈️
+          leveraging platforms like
+          <a style="color: #2f96fa" href="https://www.tvelp.com/">TVELP</a>, you
+          can transform your journeys into income-generating experiences. So,
+          pack your bags, set your sights on the next destination, and remember:
+          the world is not just your playground; it's your paycheck too. 🌏💰✈️
         </p>
       </div>
     </section>
