--- a/general/make-international-shipping-costs-a-thing-of-the-past.html
+++ b/general/make-international-shipping-costs-a-thing-of-the-past.html
@@ -257,7 +257,10 @@
           get the best of both worlds. The prospect of making money with every
           trip can make the same worth looking forward to. We hope you verify
           yourself as a
-          <a href="https://tvelp.com/" target="_blank">Tvelper</a> soon! 🌐✈️
+          <a href="https://tvelp.com/" target="_blank" style="color: #2f96fa"
+            >Tvelper</a
+          >
+          soon! 🌐✈️
         </p>
       </div>
     </section>
